--- a/gitops/manifests/operators/openshift-gitops-operator/base/argocd.yaml
+++ b/gitops/manifests/operators/openshift-gitops-operator/base/argocd.yaml
@@ -7,7 +7,9 @@ spec:
   dex:
     openShiftOAuth: true
   rbac:
-    defaultPolicy: "role:admin"
+    policy: |
+      g, system:cluster-admins, role:admin
+      g, cluster-admins, role:admin
   server:
     insecure: true
     route:
